Closed
Bug 582771
Opened 16 years ago
Closed 15 years ago
Drag & drop email to folder fails in hotmail
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | betaN+ |
People
(Reporter: alice0775, Assigned: smaug)
References
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
|
841 bytes,
text/html
|
Details | |
|
11.09 KB,
patch
|
enndeakin
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; Windows NT 6.1; WOW64; rv:2.0b3pre) Gecko/20100728 Minefield/4.0b3pre ID:20100728041048
Build Identifier: Mozilla/5.0 (Windows; Windows NT 6.1; WOW64; rv:2.0b3pre) Gecko/20100728 Minefield/4.0b3pre ID:20100728041048
In hotmail,
I can not drag a email to folder at left-side-pane.
It works on Firefox3.6.8.
When I dragstart email item, [n massages] floating box that just follows your mouse around.
and will not let you drag all the way to the folders.
Reproducible: Always
Steps to Reproduce:
1. Start Minefield with new profile
2. Open hotmail and login.
3. Click a folder(with emails) at left-side-pane
4. Drag email to folder at left-side-pane
Actual Results:
can not drag and drop email item on to afolder in the left pane.
Expected Results:
The drag & drop succeeds, and the email is moved to the folder.
Regression window:
Works:
http://hg.mozilla.org/mozilla-central/rev/bf0fdec8f43b
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a1pre) Gecko/20090913 Minefield/3.7a1pre ID:20090913050738
Fails:
http://hg.mozilla.org/mozilla-central/rev/912c6ae3b70c
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a1pre) Gecko/20090914 Minefield/3.7a1pre ID:20090914045953
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=bf0fdec8f43b&tochange=912c6ae3b70c
I revert to eda2433181c9 in local build, the problem still happens.
So, landing of Bug 503943 causes the problem.
Bug 503943 - Need a way to grab mouse events on arbitrary elements (implement setCapture/releaseCapture)
Updated•16 years ago
|
blocking2.0: --- → ?
Comment 1•16 years ago
|
||
Olli, can you have a look at this regression?
Assignee: nobody → Olli.Pettay
blocking2.0: ? → betaN+
Comment 2•16 years ago
|
||
Probably related to bug 559610.
| Assignee | ||
Comment 3•15 years ago
|
||
Bjarne, do you have any contacts from Hotmail team?
| Assignee | ||
Comment 4•15 years ago
|
||
Based on some testing looks like just having setCapture in the
element causes the problem - even if the implementation of that
method is no-op.
Comment 5•15 years ago
|
||
Repro'd in Hotmail with Minefield 4.0b7pre 9.16.2010
Investigating a possible fix.
| Assignee | ||
Comment 7•15 years ago
|
||
| Assignee | ||
Comment 8•15 years ago
|
||
I'm still writing the mochitest for this.
Based on input from MS, this should be enough for them to fix Hotmail.
Attachment #481586 -
Flags: review?(enndeakin)
| Assignee | ||
Comment 9•15 years ago
|
||
The test is a bit ugly, but should work.
Attachment #481586 -
Attachment is obsolete: true
Attachment #481639 -
Flags: review?(enndeakin)
Attachment #481586 -
Flags: review?(enndeakin)
Updated•15 years ago
|
Attachment #481639 -
Flags: review?(enndeakin) → review+
| Assignee | ||
Comment 10•15 years ago
|
||
| Reporter | ||
Comment 11•15 years ago
|
||
After landing of patch pf comment #10,
Email item can drag over folder now,
However, the folder is not selected when drag email over the folder.
D&D still fails.
http://hg.mozilla.org/mozilla-central/rev/65794a178da6
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101015 Firefox/4.0b8pre ID:20101015142309
| Assignee | ||
Comment 12•15 years ago
|
||
that is expected. Hotmail team needs now to make a fix on their side.
(I was told the patch for Gecko should be enough for them to get
things working.)
| Assignee | ||
Comment 13•15 years ago
|
||
Marking this fixed based on the message from MS
"I've tested our fix on the latest nightly build of Firefox and it works fine. "
So I assume the fix in Hotmail code will be there soon.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•