Bug 582771 - Drag & drop email to folder fails in hotmail, r=enndeakin, a=blocking